--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 
         <div class="elite-heading container p-5 mt-25 m-auto z-1 flex flex-col items-center justify-center md:mt-30">
-            <img src="/img/eliteLogoColored.png" alt="" id="logoImage" class="max-w-[180px] md:max-w-xs">
+            <img src="img/eliteLogoColored.png" alt="" id="logoImage" class="max-w-[180px] md:max-w-xs">
             <h1
                 class="font-extrabold text-5xl tracking-[0.8rem] text-center text-[#ff0e1f] md:text-7xl md:tracking-[1.7rem]">
                 ELITE</h1>
@@ -196,7 +196,7 @@
             <div
                 class="flex-1 flex flex-col rounded-xl justify-center items-center max-h-100 overflow-hidden">
 
-                <img src="/img/imgNetBG.jpg" alt="" class="rounded-xl">
+                <img src="img/imgNetBG.jpg" alt="" class="rounded-xl">
 
             </div>
         </div>
@@ -334,7 +334,7 @@
             class="grid-container-games grid-cols-1 mt-5 gap-8 p-5 m-auto grid max-w-6xl md:grid-cols-2 lg:grid-cols-3">
             <div class="grid-item flex flex-col min-h-140">
                 <div class="grid-item-img bg-[url(/img/bgLoL.jpg)] p-5 bg-cover bg-center bg-no-repeat flex-2">
-                    <img src="/img/imgLolIcon.png" alt="" width="45px">
+                    <img src="img/imgLolIcon.png" alt="" width="45px">
                 </div>
                 <div class="grid-item-text bg-[#121212] flex-1 p-5 text-center pb-7">
                     <h3 class="font-bold text-2xl uppercase text-white mt-3">League of Legends</h3>
@@ -345,7 +345,7 @@
             </div>
             <div class="grid-item flex flex-col min-h-130">
                 <div class="grid-item-img bg-[url(/img/bgValorant.jpg)] p-5 bg-cover bg-center bg-no-repeat flex-2">
-                    <img src="/img/imgValorantIcon.png" alt="" width="60px">
+                    <img src="img/imgValorantIcon.png" alt="" width="60px">
                 </div>
                 <div class="grid-item-text bg-[#121212] flex-1 p-5 text-center pb-7">
                     <h3 class="font-bold text-2xl uppercase text-white mt-3">Valorant</h3>
@@ -356,7 +356,7 @@
             </div>
             <div class="grid-item flex flex-col min-h-130">
                 <div class="grid-item-img bg-[url(/img/bgCS.jpg)] p-3 bg-cover bg-center bg-no-repeat flex-2">
-                    <img src="/img/imgCS.png" alt="" width="80px">
+                    <img src="img/imgCS.png" alt="" width="80px">
                 </div>
                 <div class="grid-item-text bg-[#121212] flex-1 p-5 text-center pb-7">
                     <h3 class="font-bold text-2xl uppercase text-white mt-3">Counter-Strike</h3>
@@ -367,7 +367,7 @@
             </div>
             <div class="grid-item flex flex-col min-h-130">
                 <div class="grid-item-img bg-[url(/img/bgFort.jpg)] p-5 bg-cover bg-center bg-no-repeat flex-2">
-                    <img src="/img/imgFortIcon.png" alt="" width="50px">
+                    <img src="img/imgFortIcon.png" alt="" width="50px">
                 </div>
                 <div class="grid-item-text bg-[#121212] flex-1 p-5 text-center pb-7">
                     <h3 class="font-bold text-2xl uppercase text-white mt-3">Fortnite</h3>
@@ -378,7 +378,7 @@
             </div>
             <div class="grid-item flex flex-col min-h-130">
                 <div class="grid-item-img bg-[url(/img/bgMarvel.jpg)] pl-5 bg-cover bg-center bg-no-repeat flex-2">
-                    <img src="/img/imgMarvelIcon.png" alt="" width="80px">
+                    <img src="img/imgMarvelIcon.png" alt="" width="80px">
                 </div>
                 <div class="grid-item-text bg-[#121212] flex-1 p-5 text-center pb-7">
                     <h3 class="font-bold text-2xl uppercase text-white mt-3">Marvel Rivals</h3>
@@ -389,7 +389,7 @@
             </div>
             <div class="grid-item flex flex-col min-h-130">
                 <div class="grid-item-img bg-[url(/img/bgDota.jpg)] p-5 bg-cover bg-center bg-no-repeat flex-2">
-                    <img src="/img/imgDotaIcon.png" alt="" width="50px">
+                    <img src="img/imgDotaIcon.png" alt="" width="50px">
                 </div>
                 <div class="grid-item-text bg-[#121212] flex-1 p-5 text-center pb-7">
                     <h3 class="font-bold text-2xl uppercase text-white mt-3">Dota 2</h3>
@@ -466,9 +466,9 @@
 
     <section id="ps5">
         <div
-            class="ps5-wrap relative w-full gap-20 p-15 flex justify-center items-center mt-10 bg-[url(/img/psBG.jpg)] bg-bottom bg-cover bg-no-repeat flex-col-reverse md:flex-row">
+            class="ps5-wrap relative w-full gap-20 p-15 flex justify-center items-center mt-10 bg-[url(img/psBG.jpg)] bg-bottom bg-cover bg-no-repeat flex-col-reverse md:flex-row">
             <div class="ps5-img-wrap z-3 ">
-                <img src="/img/ps5.png" alt="" class="drop-shadow-2xl w-xs hidden md:block">
+                <img src="img/ps5.png" alt="" class="drop-shadow-2xl w-xs hidden md:block">
             </div>
             <div class="ps5-text-wrap flex flex-col text-center md:text-left">
                 <h2 class="font-bold text-white text-4xl/12 z-3 max-w-lg"><span class="bg-[#ff0e1f] px-2">PS5</span>
@@ -525,7 +525,7 @@
             <div
                 class="flex-1 flex flex-col rounded-xl justify-center items-center max-h-120 overflow-hidden">
 
-                <img src="/img/bgAbout.jpg" alt="">
+                <img src="img/bgAbout.jpg" alt="">
 
             </div>
         </div>
@@ -536,7 +536,7 @@
 
 
     <footer class="p-10 pb-18 bg-[#ff0e1f] flex flex-col justify-center text-center items-center">
-        <img src="/img/eliteLogoFooter.svg" alt="" width="300px" class="p-5">
+        <img src="img/eliteLogoFooter.svg" alt="" width="300px" class="p-5">
         <h1 class="font-bold text-3xl text-black mt-2">KONTAKTIRAJTE NAS</h1>
         <p class="text-black text-2xl font-bold mt-15"> <i class="fa-solid fa-phone-volume pr-2"></i>+381 60 1314993</p>
         <p class="text-black text-2xl font-bold mt-3"> <i class="fa-solid fa-envelope pr-2"></i>elitegaming@gmail.com
