final git fix with fixed images

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./input.css">
     <link href="./output.css" rel="stylesheet">
 </head>
 
@@ -96,9 +97,9 @@
             quibusdam.</p>
     </main>
 
-    <div class=" grid m-auto gap-y-15 md:grid-cols-3 mt-10">
+    <div class="oprema grid m-auto gap-y-15 md:grid-cols-3 mt-10">
         <div
-            class="grid-item min-h-70 flex items-end bg-[url(/img/imgMonitor.jpg)] bg-cover bg-center overflow-hidden relative">
+            class="grid-item min-h-70 flex items-end overflow-hidden bg-cover bg-center relative">
             <div class="text-wrap pt-2 flex duration-300 absolute">
                 <div class="text-container m-auto w-full p-5 pl-10">
                     <span class="p-1 px-5 text-white bg-[#ff0e1f]">high-res</span>
@@ -111,7 +112,7 @@
             </div>
         </div>
         <div
-            class="grid-item min-h-70 flex items-end bg-[url(/img/imgKomp.jpg)] bg-cover bg-center overflow-hidden relative">
+            class="grid-item min-h-70 flex items-end bg-cover bg-center overflow-hidden relative">
             <div class="text-wrap pt-2 flex duration-300 absolute">
                 <div class="text-container m-auto w-full p-5 pl-10">
                     <span class="p-1 px-5 text-white bg-[#ff0e1f]">performance</span>
@@ -124,7 +125,7 @@
             </div>
         </div>
         <div
-            class="grid-item min-h-70 flex items-end bg-[url(/img/imgPS.jpg)] bg-cover bg-center overflow-hidden relative">
+            class="grid-item min-h-70 flex items-end bg-cover bg-center overflow-hidden relative">
             <div class="text-wrap pt-2 flex duration-300 absolute">
                 <div class="text-container m-auto w-full p-5 pl-10">
                     <span class="p-1 px-5 text-white bg-[#ff0e1f]">console</span>
@@ -137,7 +138,7 @@
             </div>
         </div>
         <div
-            class="grid-item min-h-70 flex items-end bg-[url(/img/imgTastatura.jpg)] bg-cover bg-center overflow-hidden relative">
+            class="grid-item min-h-70 flex items-end bg-cover bg-center overflow-hidden relative">
             <div class="text-wrap pt-2 flex duration-300 absolute">
                 <div class="text-container m-auto w-full p-5 pl-10">
                     <span class="p-1 px-5 text-white bg-[#ff0e1f]">mechanical</span>
@@ -150,7 +151,7 @@
             </div>
         </div>
         <div
-            class="grid-item min-h-70 flex items-end bg-[url(/img/imgMis.jpg)] bg-cover bg-center overflow-hidden relative">
+            class="grid-item min-h-70 flex items-end bg-cover bg-center overflow-hidden relative">
             <div class="text-wrap pt-2 flex duration-300 absolute">
                 <div class="text-container m-auto w-full p-5 pl-10">
                     <span class="p-1 px-5 text-white bg-[#ff0e1f]">fast</span>
@@ -164,7 +165,7 @@
             </div>
         </div>
         <div
-            class="grid-item min-h-70 flex items-end bg-[url(/img/imgSluske.jpg)] bg-cover bg-center overflow-hidden relative">
+            class="grid-item min-h-70 flex items-end bg-cover bg-center overflow-hidden relative">
             <div class="text-wrap pt-2 flex duration-300 absolute">
                 <div class="text-container m-auto w-full p-5 pl-10">
                     <span class="p-1 px-5 text-white bg-[#ff0e1f]">hi-fi</span>
@@ -206,7 +207,7 @@
     </section>
     <section id="VIP" class="mt-12">
         <div
-            class="vip-wrap relative w-full p-20 flex flex-col justify-center items-center text-center bg-[url(/img/imgGamesBG.jpg)] bg-center bg-cover bg-no-repeat">
+            class="vip-wrap relative w-full p-20 flex flex-col justify-center items-center text-center bg-center bg-cover bg-no-repeat">
             <h2 class="font-bold text-white text-5xl z-3"><span class="text-[#ff0e1f]">VIP</span> SOBA</h2>
             <p class="text-white mt-5 z-3 max-w-sm">Igraj igrice u VIP sobi sa najboljom opremom i bez ometanja</p>
             <a class="px-8 p-4 z-3 mt-10 bg-[#ff0e1f] text-white overflow-hidden duration-400">REZERVIŠI</a>
@@ -333,7 +334,7 @@
         <div
             class="grid-container-games grid-cols-1 mt-5 gap-8 p-5 m-auto grid max-w-6xl md:grid-cols-2 lg:grid-cols-3">
             <div class="grid-item flex flex-col min-h-140">
-                <div class="grid-item-img bg-[url(/img/bgLoL.jpg)] p-5 bg-cover bg-center bg-no-repeat flex-2">
+                <div class="grid-item-img p-5 bg-cover bg-center bg-no-repeat flex-2">
                     <img src="img/imgLolIcon.png" alt="" width="45px">
                 </div>
                 <div class="grid-item-text bg-[#121212] flex-1 p-5 text-center pb-7">
@@ -344,7 +345,7 @@
                 </div>
             </div>
             <div class="grid-item flex flex-col min-h-130">
-                <div class="grid-item-img bg-[url(/img/bgValorant.jpg)] p-5 bg-cover bg-center bg-no-repeat flex-2">
+                <div class="grid-item-img-2 p-5 bg-cover bg-center bg-no-repeat flex-2">
                     <img src="img/imgValorantIcon.png" alt="" width="60px">
                 </div>
                 <div class="grid-item-text bg-[#121212] flex-1 p-5 text-center pb-7">
@@ -355,7 +356,7 @@
                 </div>
             </div>
             <div class="grid-item flex flex-col min-h-130">
-                <div class="grid-item-img bg-[url(/img/bgCS.jpg)] p-3 bg-cover bg-center bg-no-repeat flex-2">
+                <div class="grid-item-img-3 p-3 bg-cover bg-center bg-no-repeat flex-2">
                     <img src="img/imgCS.png" alt="" width="80px">
                 </div>
                 <div class="grid-item-text bg-[#121212] flex-1 p-5 text-center pb-7">
@@ -366,7 +367,7 @@
                 </div>
             </div>
             <div class="grid-item flex flex-col min-h-130">
-                <div class="grid-item-img bg-[url(/img/bgFort.jpg)] p-5 bg-cover bg-center bg-no-repeat flex-2">
+                <div class="grid-item-img-4 p-5 bg-cover bg-center bg-no-repeat flex-2">
                     <img src="img/imgFortIcon.png" alt="" width="50px">
                 </div>
                 <div class="grid-item-text bg-[#121212] flex-1 p-5 text-center pb-7">
@@ -377,7 +378,7 @@
                 </div>
             </div>
             <div class="grid-item flex flex-col min-h-130">
-                <div class="grid-item-img bg-[url(/img/bgMarvel.jpg)] pl-5 bg-cover bg-center bg-no-repeat flex-2">
+                <div class="grid-item-img-5 pl-5 bg-cover bg-center bg-no-repeat flex-2">
                     <img src="img/imgMarvelIcon.png" alt="" width="80px">
                 </div>
                 <div class="grid-item-text bg-[#121212] flex-1 p-5 text-center pb-7">
@@ -388,7 +389,7 @@
                 </div>
             </div>
             <div class="grid-item flex flex-col min-h-130">
-                <div class="grid-item-img bg-[url(/img/bgDota.jpg)] p-5 bg-cover bg-center bg-no-repeat flex-2">
+                <div class="grid-item-img-6 p-5 bg-cover bg-center bg-no-repeat flex-2">
                     <img src="img/imgDotaIcon.png" alt="" width="50px">
                 </div>
                 <div class="grid-item-text bg-[#121212] flex-1 p-5 text-center pb-7">
@@ -403,7 +404,7 @@
 
     <section id="tournament" class="p-5">
         <div
-            class="min-h-120 flex gap-10 mt-5 p-8 sm:p-15 flex-col max-w-[1115px] m-auto rounded-4xl justify-center items-center bg-[url(/img/bgTurnir.jpg)] bg-center bg-cover bg-no-repeat">
+            class="min-h-120 flex gap-10 mt-5 p-8 sm:p-15 flex-col max-w-[1115px] m-auto rounded-4xl justify-center items-center bg-[url('./img/bgTurnir.jpg')] bg-center bg-cover bg-no-repeat">
             <h1 class="font-bold text-white text-3xl text-center p-0 md:p-3 md:text-4xl sm:text-left"><span
                     class="bg-[#ff0e1f] px-2">DOMINIRAJ</span> TURNIRE</h1>
             <div
@@ -466,7 +467,7 @@
 
     <section id="ps5">
         <div
-            class="ps5-wrap relative w-full gap-20 p-15 flex justify-center items-center mt-10 bg-[url(img/psBG.jpg)] bg-bottom bg-cover bg-no-repeat flex-col-reverse md:flex-row">
+            class="ps5-wrap relative w-full gap-20 p-15 flex justify-center items-center mt-10 bg-bottom bg-cover bg-no-repeat flex-col-reverse md:flex-row">
             <div class="ps5-img-wrap z-3 ">
                 <img src="img/ps5.png" alt="" class="drop-shadow-2xl w-xs hidden md:block">
             </div>
